--- a/collect-calculator.query/collect-calculator.query-infra-ioc/collect-calculator.query-infra-ioc.csproj
+++ b/collect-calculator.query/collect-calculator.query-infra-ioc/collect-calculator.query-infra-ioc.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\collect-calculator.query-domain\collect-calculator.query-domain.csproj" />
+    <ProjectReference Include="..\collect-calculator.query-infra-data\collect-calculator.query-infra-data.csproj" />
+  </ItemGroup>
+
 </Project>
